--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://hoanganhnh.github.io/sorting-visualizer",
+	"homepage": "https://hoanganhnh.github.io/sorting-visualizer/",
 	"name": "sorting-visualizer",
 	"version": "0.1.0",
 	"private": true,
